added modelAvatar field in user
